# gitorade

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  azure-pipelines.yml  gitorade.py  linter.py  requirements-dev.txt  setup.cfg  tox.ini  utils.py
RELEASING/: changelog.py  set_release_env.sh
tests/: test_gitorade.py  test_true.py
