[metadata]
name = gitorade
version = 1.0.8
description = git commit on steroids
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marouenes/gitorade
author = Marouane Skandaji
author_email = marouane.skandaji@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Source Code = https://github.com/marouenes/gitorade
    Bug Tracker = https://github.com/marouenes/gitorade/issues

[options]
py_modules = gitorade
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*
    Makefile

[options.entry_points]
console_scripts =
    gitorade = gitorade:main

[options.extras_require]
build =
    build
    twine
    wheel
dev =
    PyGitHub
    black
    build
    coverage
    isort
    pre-commit
    pylint
    pytest
    pytest-cov
    pytest-mock
    six
    sphinx
    sphinx-rtd-theme
    twine
    wheel
docs =
    sphinx
    sphinx-rtd-theme
qa =
    black
    isort
    pre-commit
    pylint
    six
tests =
    coverage
    pytest
    pytest-cov
    pytest-mock

[bdist_wheel]
universal = True

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 99
